--- a/node/package.json
+++ b/node/package.json
@@ -12,6 +12,7 @@
   "repository": "https://github.com/plaid/quickstart",
   "license": "ISC",
   "dependencies": {
+    "@supabase/supabase-js": "^2.58.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
